--- a/.github/workflows/alibabacloud.yml
+++ b/.github/workflows/alibabacloud.yml
@@ -113,7 +113,7 @@ jobs:
     # 3.2 Deploy the image to the ACK cluster
     - name: Set up Kustomize
       run: |-
-        curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash /dev/stdin 3.8.6
+        curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash -s -- 3.8.6
     - name: Deploy
       run: |-
         ./kustomize edit set image REGISTRY/NAMESPACE/IMAGE:TAG=$REGISTRY/$NAMESPACE/$IMAGE:$TAG
